--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ Web/OTA/firmware_lock_207.bin
 Web/OTA/firmware_lock_208.bin
 server.log
 Web/OTA/data/devices.json
+Web/OTA/firmware_light_207.bin
+Web/OTA/firmware_light_208.bin
+Web/OTA/firmware_lock_207.bin
+Web/OTA/firmware_lock_208.bin
